@@ -1,3 +1,7 @@
+r121:
+Added : Makefile : install for kFreeBSD and Hurd (Nobuhiro Iwamatsu)
+Fix : Makefile : install for OS-X and BSD, thanks to Takayuki Matsuoka
+
 r120:
 Modified : Streaming API, using strong types
 Added : LZ4_versionNumber(), thanks to Takayuki Matsuoka
